# matrix-cli

./: .editorconfig  .flake8  .gitattributes  .gitignore  1  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  release.yml
.matrix/: README.md  events.yml  health.yml  repo.yml
docs/: changelog.md  commands.md  configuration.md  do.md  examples.md  index.md  install.md  mcp.md  quickstart.md  reference.md  runtime.md  troubleshooting.md
examples/: ingest_server_v2.sh  ingest_watsonx_demo_v2.sh  ingest_watsonx_demo_v2_ani.sh  ingest_watsonx_remote.sh  ingest_watsonx_v2.sh  matrix-cli-e2e-demo.sh  matrix_cli_demo.sh  matrix_cli_demo_watsonx.sh  matrix_cli_demo_watsonx_normal.sh  run.sh  search_example.py  search_via_cli.py  search_via_cli.sh  watsonx-inline-v2.sh  watsonx-matrix-cli-local.sh  watsonx-matrix-cli.sh  watsonx-wow.sh
examples/agents/watsonx-agent/: .env.example  server.py
examples/demos/v2/: matrix_cli_demo.sh  matrix_cli_demo_watsonx.sh
examples/demos/v3/: matrix_cli_demo_watsonx.sh
examples/demos/v4/: banner.txt  intro.py  matrix_cli_demo_watsonx.sh
matrix_cli/: __main__.py  config.py
matrix_cli/commands/: doctor.py  install.py  list.py  mcp.py  ps.py  remotes.py  run.py  show.py
matrix_cli/ui/: cli.py  loading.py  running.py  theme.py
matrix_cli/ui/assets/: banner.txt
matrix_cli/util/: operator.py
scripts/: build_wheels.sh  check_integration_local.py  check_integration_local.sh  debug_resolver.sh  demo_search.py  demo_search.sh  probe_search.sh  smoke_cli_methods.py  smoke_cli_methods.sh
scripts/bash/: debug_installer.sh  debuger_matrix_run.sh  debuger_matrixhub.sh  poc_demo.sh  poc_full_demo.sh  poc_full_demo_local.sh  poc_full_demo_native.sh  simple_demo.sh
tests/: conftest.py  new_test_alias_store.py  test_installer.py  test_search_show_remotes.py
